Added version to homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Book Store Finder</h1>
+<h1>Book Store Finder v0.2 (SE)</h1>
+
+
 <h2>Supporting: <%= @bookstores.to_sentence %></h2>
 <div class="search_fields">
   <%= form_tag "/search", remote: true do %>
